content: remove "For hire" sections

--- a/layouts/_for_hire.pug
+++ b/layouts/_for_hire.pug
@@ -1,4 +1,4 @@
-if !noForHireCTA
+if forHire && !noForHireCTA
   .project.project--side.cta
     h2!= get(messages, ['forHireHeading', i18n.language])
     p!= get(messages, ['forHireContent', i18n.language])
