--- a/layouts/_meta.pug
+++ b/layouts/_meta.pug
@@ -1,5 +1,7 @@
 <meta property="og:type" content="website">
 meta(property="og:title",content=(title || siteTitle))
+if ogDescription
+  meta(property="og:description",content=ogDescription)
 <meta property="og:image" content="#{siteUrl}/media/meta.png">
 
 <meta property="twitter:card" content="summary">
