content: draft article about the benefits of CSS custom properties

--- a/content/style.css
+++ b/content/style.css
@@ -725,6 +725,10 @@ h6 [href^="#"]:focus {
   text-align: center !important;
 }
 
+.d--none {
+  display: none;
+}
+
 .no-border {
   border: 0 !important;
 }
