--- a/content/style.css
+++ b/content/style.css
@@ -16,7 +16,7 @@ body {
   line-height: 1.5;
   /* System font stack from https://css-tricks.com/snippets/css/system-font-stack/ */
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-  color: #111;
+  color: #1D273A;
   background: #fafafa;
   
   display: flex;
@@ -114,10 +114,12 @@ legend {
 
 pre > code,
 main > script,
-main > style {
+main > style,
+.code-block,
+.hljs {
   display: block;
   padding: 0.5rem;
-  background-color: #111;
+  background-color: #1D273A;
   color: #fafafa;
   overflow: auto;
   white-space: pre;
@@ -244,13 +246,13 @@ ul, ol {
 }
 
 :focus {
-  outline: solid 2px #111;
+  outline: solid 2px #1D273A;
   outline-offset: 2px;
 }
 
 .skip-link {
   display: block;
-  background: #111;
+  background: #1D273A;
   color: #fafafa;
   text-align: center;
   padding: 0.75rem;
@@ -290,7 +292,7 @@ ul, ol {
 
 .site-header [aria-current] {
   text-decoration: none;
-  background: linear-gradient(#111,#111);
+  background: linear-gradient(#1D273A,#1D273A);
   background-size: 100% 1.5rem;
   background-repeat: no-repeat;
   background-position: center;
@@ -401,8 +403,8 @@ h6 [href^="#"]:focus {
 .post-list > * + * {
   margin-top: 0;
   border-top: solid 0.0625rem transparent;
-  border-image-source: repeating-linear-gradient(90deg, #111 15%, transparent 0);
-  border-image-source: linear-gradient(90deg, #111 max(20%, 2rem), transparent 0);
+  border-image-source: repeating-linear-gradient(90deg, #1D273A 15%, transparent 0);
+  border-image-source: linear-gradient(90deg, #1D273A max(20%, 2rem), transparent 0);
   border-image-slice: 1 0 0;
 }
 
@@ -423,7 +425,7 @@ h6 [href^="#"]:focus {
 }
 
 .post-list-item:focus-within {
-  outline: solid 2px #111;
+  outline: solid 2px #1D273A;
   outline-offset: 2px;
 }
 
@@ -525,7 +527,7 @@ h6 [href^="#"]:focus {
 .project h2,
 .project h3,
 .project h4 {
-  background: #111;
+  background: #1D273A;
   color: #fafafa;
   margin-left: -1.25rem;
   margin-top: -0.5rem;
@@ -545,7 +547,7 @@ h6 [href^="#"]:focus {
 .project h4::after {
   content: '';
   position: absolute;
-  border: solid 0.25rem #111;
+  border: solid 0.25rem #1D273A;
   border-bottom-color: transparent;
   border-left-color: transparent;
   top: 100%;
@@ -576,7 +578,7 @@ h6 [href^="#"]:focus {
 .project h2:focus-within,
 .project h3:focus-within,
 .project h4:focus-within {
-  outline: solid 2px #111;
+  outline: solid 2px #1D273A;
   outline-offset: 2px;
 } 
 
@@ -595,7 +597,7 @@ h6 [href^="#"]:focus {
 }
 
 .project--side {
-  background-image: linear-gradient(#fafafa,#fafafa), linear-gradient(#111,#111);
+  background-image: linear-gradient(#fafafa,#fafafa), linear-gradient(#1D273A,#1D273A);
   background-size: calc(100% - 4px) calc(100% - 1.5rem - 4px), 100% calc(100% - 1.5rem);
   background-position: bottom 2px left 2px, bottom left;
   padding-bottom: 1rem;
@@ -604,7 +606,7 @@ h6 [href^="#"]:focus {
 .project--side h2,
 .project--side h3 {
   background: #fafafa;
-  color: #111;
+  color: #1D273A;
   border: solid 2px;
   font:inherit;
   padding-bottom: 0.375rem;
@@ -616,7 +618,7 @@ h6 [href^="#"]:focus {
 }
 
 .project--reversed {
-  background-image: linear-gradient(#111,#111), linear-gradient(#fafafa,#fafafa);
+  background-image: linear-gradient(#1D273A,#1D273A), linear-gradient(#fafafa,#fafafa);
   color: #fafafa;
   background-size: calc(100% - 4px) calc(100% - 1.625rem - 4px), 100% calc(100% - 1.625rem);
   background-position: bottom 2px left 2px, bottom left;
@@ -629,7 +631,7 @@ h6 [href^="#"]:focus {
 .project--reversed h3 {
   margin-left: -1.5rem;
 
-  background: #111;
+  background: #1D273A;
   color: inherit;
   border: solid 0.125rem #fafafa;
   font-size: 1.125rem;
@@ -731,4 +733,16 @@ h6 [href^="#"]:focus {
 
 .no-border {
   border: 0 !important;
+}
+
+/* HighlightJS theme tweak */
+.hljs-comment,
+.hljs-quote,
+.hljs-deletion,
+.hljs-meta {
+  color: #8E9CB7;
+}
+
+.hljs-number {
+  color: #C291B6;
 }
