--- a/nuxt/assets/style.css
+++ b/nuxt/assets/style.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 
-html{ 
+html{
   height: 100%;
   scroll-padding: 1.5rem;
 }
@@ -14,11 +14,11 @@ body {
 
 body {
   line-height: 1.5;
+
   /* System font stack from https://css-tricks.com/snippets/css/system-font-stack/ */
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   color: #1D273A;
   background: #fafafa;
-  
   display: flex;
   flex-direction: column;
 }
@@ -68,8 +68,8 @@ style,
 .code {
   font-family: monospace;
   font-size: 1.2em;
-  background-color: #eeeeee;
-  outline: solid 2px #eeeeee;
+  background-color: #eee;
+  outline: solid 2px #eee;
 }
 
 .code-like {
@@ -175,7 +175,6 @@ blockquote cite {
   padding: 0.25rem 0.5rem;
   margin-right: -1.5rem;
   background: white;
-
   position: relative;
 }
 
@@ -293,7 +292,7 @@ ul, ol {
   }
 }
 
-.site-header [aria-current] {
+.site-header [aria-current]:not(.no-active) {
   text-decoration: none;
   background: linear-gradient(#1D273A,#1D273A);
   background-size: 100% 1.5rem;
@@ -381,7 +380,7 @@ h4 [href^="#"],
 h5 [href^="#"],
 h6 [href^="#"] {
   display: none;
-} 
+}
 
 
 h1 [href^="#"]:focus,
@@ -412,7 +411,7 @@ h6 [href^="#"]:focus {
 }
 
 .post-list-item {
-  position: relative;  
+  position: relative;
   z-index: 0;
 }
 
@@ -498,8 +497,8 @@ h6 [href^="#"]:focus {
 
 .demo-element-striped {
   /* https://css-tricks.com/why-do-we-have-repeating-linear-gradient-anyway/ */
-  background:  repeating-linear-gradient(-45deg, 
-      currentColor, currentColor 0.125rem /* lines */, 
+  background:  repeating-linear-gradient(-45deg,
+      currentColor, currentColor 0.125rem /* lines */,
       white calc(0.125rem + 1px), white 0.5rem /* space between */
   ) 50% no-repeat;
 }
@@ -539,14 +538,14 @@ h6 [href^="#"]:focus {
   color: #fafafa;
   margin-left: -1.25rem;
   margin-top: -0.5rem;
-  /* Irregular vertical padding to cater 
-     for the presence of a link in the heading 
+
+  /* Irregular vertical padding to cater
+     for the presence of a link in the heading
      for most projects */
   padding: 0.3125rem 0.75rem 0.4375rem;
   display: table;
   font-size: 1.125rem;
   font-weight: normal;
-
   position: relative;
 }
 
@@ -588,7 +587,7 @@ h6 [href^="#"]:focus {
 .project h4:focus-within {
   outline: solid 2px #1D273A;
   outline-offset: 2px;
-} 
+}
 
 .project h2:focus-within a:focus,
 .project h3:focus-within a:focus,
@@ -631,6 +630,7 @@ h6 [href^="#"]:focus {
   background-size: calc(100% - 4px) calc(100% - 1.625rem - 4px), 100% calc(100% - 1.625rem);
   background-position: bottom 2px left 2px, bottom left;
   padding-bottom: 1rem;
+
   /* Add a bit of padding due to the darkness of the color */
   padding: 1rem;
 }
@@ -638,20 +638,22 @@ h6 [href^="#"]:focus {
 .project--reversed h2,
 .project--reversed h3 {
   margin-left: -1.5rem;
-
   background: #1D273A;
   color: inherit;
   border: solid 0.125rem #fafafa;
   font-size: 1.125rem;
+
   /* Remove borders on the left and bottom
      rather than setting them to transparent
      to avoid 45deg. angles where they join */
   border-left: 0;
   border-bottom: 0;
+
   /* Add them back as padding */
   padding-bottom: calc(0.375rem + 0.125rem);
   padding-left: calc(0.5rem + 0.125rem);
-  /* Draw an extra border at the bottom-right 
+
+  /* Draw an extra border at the bottom-right
      that'll join the side of the project */
   background-image: linear-gradient(#fafafa,#fafafa);
   background-repeat: no-repeat;
@@ -675,12 +677,10 @@ h6 [href^="#"]:focus {
   margin-left: auto;
   text-align: right;
   margin-right: -1.25rem;
-  
   padding: 0.25rem 0.5rem 0.5rem;
   background: linear-gradient(#e0e0e0, #e0e0e0);
   background-repeat: no-repeat;
   background-size: 100% calc(100% - 0.25rem);
-
   position: relative;
 }
 
