content: finalise english version of css custom properties and font-size-adjust

--- a/assets/components/_centered-children.scss
+++ b/assets/components/_centered-children.scss
@@ -21,7 +21,12 @@ $centered-children__wider__max-width: 46rem;
 }
 
 .contained-children--with-automatic-widening {
-  > pre, figure, img, blockquote, style, script {
+  > pre,
+  > figure, 
+  > img, 
+  > blockquote,
+  > style, 
+  > script {
     max-width: $centered-children__wider__max-width;
   }
 }
